<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TextPreguntasFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <Button
        android:id="@+id/respuestaText1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_margin="200dp"
        android:text="@string/respuesta1Text" />

    <Button
        android:id="@+id/respuestaText2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_margin="300dp"
        android:text="@string/respuesta2Text" />

    <Button
        android:id="@+id/respuestaText3"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_margin="400dp"
        android:text="@string/respuesta3Text" />

    <Button
        android:id="@+id/respuestaText4"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_margin="500dp"
        android:text="@string/respuesta4Text" />

    <Button
        android:id="@+id/AtrasButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atrasTextFragment" />

    <TextView
        android:id="@+id/PreguntaTextFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_margin="100dp"
        android:text="@string/preguntaText" />

</FrameLayout>