<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImagenesFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="206sp"
        android:layout_height="170sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:src="@drawable/sagrada_familia"
        android:contentDescription="@string/imagen" />

    <Button
        android:id="@+id/respuestaImagen1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/respuesta1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300sp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/respuestaImagen2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400sp"
        android:text="@string/respuesta2"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/respuestaImagen3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/respuesta3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500sp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/respuestaImagen4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/respuesta4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="600sp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/preguntaImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunta"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250sp"
        android:textSize="20sp"/>


</RelativeLayout>