<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Imagenes2Fragment">

    <ImageView
        android:id="@+id/imagenRespuesta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="25dp"
        android:adjustViewBounds="true"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        app:layout_constraintEnd_toStartOf="@+id/imagenRespuesta2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/respuestaimagen1" />

    <ImageView
        android:id="@+id/imagenRespuesta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="45dp"
        android:adjustViewBounds="true"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagenRespuesta1"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/respuestaimagen2" />

    <ImageView
        android:id="@+id/imagenRespuesta3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45sp"
        android:layout_marginTop="100sp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="120sp"
        android:adjustViewBounds="true"
        android:maxWidth="150sp"
        android:maxHeight="150sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imagenRespuesta4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenRespuesta1"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/respuestaimagen3" />

    <ImageView
        android:id="@+id/imagenRespuesta4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100sp"
        android:layout_marginEnd="45sp"
        android:layout_marginBottom="120sp"
        android:adjustViewBounds="true"
        android:maxWidth="150sp"
        android:maxHeight="150sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagenRespuesta3"
        app:layout_constraintTop_toBottomOf="@+id/imagenRespuesta2"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/respuestaimagen4" />

    <TextView
        android:id="@+id/preguntaImagenes2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="164dp"
        android:text="@string/preguntaImg2"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <Button
        android:id="@+id/reiniciarButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/reiniciar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>